[package]
name = "ockam_influxdb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ockam = { path = "../../../implementations/rust/ockam/ockam" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tracing = "*"

[dev-dependencies]
ockam_transport_tcp = { path = "../../../implementations/rust/ockam/ockam_transport_tcp" }